# SpRay

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.header  README.md
cmake/: FindEmbree.cmake  FindOpenMP.cmake  pbrt_compile.cmake  pbrt_flags.cmake
docs/: README.md  build_linux.md  build_mac.md  example1.md  example2.md  index.md  intro.md
docs/_layouts/: default.html
examples/: env_spray_linux.sh  env_spray_macos.sh  wavelet.ply
examples/spheres/: sphere-wavelet-domains.spray  sphere-wavelet.spray  sphere.spray  spheres-diffuse-light.spray  spheres-point-light.spray  spheres.sh  spheres.spray
examples/wavelet/: wavelet.sh  wavelet0.ply  wavelet1.ply  wavelet_example.spray
examples/wavelets64/: wavelets64.domain  wavelets64.sh  wavelets64.spray  wavelets64_film.sh  wavelets64_glfw.sh
scripts/: plyfiles_to_scene.py
src/: CMakeLists.txt  cmake_config.h.in
src/accelerators/: wbvh_embree.cc  wbvh_primitive.h
src/apps/: baseline_insitu.cc  baseline_insitu2.cc  baseline_ooc.cc  ply_header_reader.cc  spray_insitu.cc  spray_insitu_multithread.cc  spray_insitu_multithread_hybridgeometry.cc  spray_insitu_multithread_shapes.cc  spray_insitu_shapes.cc  spray_insitu_singlethread.cc  spray_insitu_singlethread_shapes.cc  spray_ooc.cc
src/baseline/: baseline_base_tracer.h  baseline_base_tracer.inl  baseline_comm.h  baseline_comm.inl  baseline_commit_buffer.h  baseline_image_tracer.h  baseline_image_tracer.inl  baseline_insitu_tracer.h  baseline_insitu_tracer.inl  baseline_insitu_tracer2.h  baseline_insitu_tracer2.inl  baseline_isector.h  baseline_qstats.h  baseline_ray.cc  baseline_ray.h  baseline_ray_stats.h  baseline_schedulers.cc  baseline_schedulers.h  baseline_shader_ao.h  baseline_shader_pt.h  baseline_tilers.h
src/caches/: caches.h  infinite_cache.cc  infinite_cache.h  lru_cache.cc
src/display/: composite.cc  composite.h  display.cc  display.h  image.h  opengl.h  spray_glfw.h  spray_glfw.inl  vis.h  vis.inl
src/insitu/: insitu_comm.cc  insitu_comm.h  insitu_comm.inl  insitu_isector.h  insitu_multithread_tracer.h  insitu_multithread_tracer.inl  insitu_ray.h  insitu_shader_ao.h  insitu_shader_pt.h  insitu_shader_pt_shapes.h  insitu_singlethread_tracer.h  insitu_singlethread_tracer.inl  insitu_tcontext.h  insitu_tcontext.inl  insitu_tiler.cc  insitu_tiler.h  insitu_util.h  insitu_vbuf.cc  insitu_vbuf.h  insitu_work.h  insitu_work_stats.cc  insitu_work_stats.h
src/io/: obj_loader.cc  obj_loader.h  ply_loader.cc  ply_loader.h  scene_loader.cc  scene_loader.h
src/materials/: reflection.cc  reflection.h
src/ooc/: ooc_domain_stats.cc  ooc_domain_stats.h  ooc_isector.h  ooc_pcontext.cc  ooc_pcontext.h  ooc_ray.h  ooc_shader_ao.h  ooc_shader_pt.h  ooc_tcontext.cc  ooc_tcontext.h  ooc_tcontext.inl  ooc_tiler.cc  ooc_tiler.h  ooc_tracer.h  ooc_tracer.inl  ooc_vbuf.cc  ooc_vbuf.h
src/partition/: aabb.cc  aabb.h  block_buffer.cc  block_buffer.h  data_partition.h  domain.cc  domain.h  ply_loader.cc  ply_loader.h  qvector.h  tile.cc  trimesh_buffer.cc  trimesh_buffer.h
src/render/: aabb.cc  aabb.h  arena_queue.h  block_buffer.cc  caches.h  camera.cc  camera.h  config.cc  config.h  data_partition.h  domain.h  hybrid_geometry_buffer.cc  hybrid_geometry_buffer.h  infinite_cache.cc  infinite_cache.h  insitu_cache.h  light.h  lru_cache.cc  lru_cache.h  material.h  morton.h  qvector.h  rays.h  reflection.cc  reflection.h  sampler.cc  sampler.h  scene.h  scene.inl  shape.h  shape_buffer.cc  shape_buffer.h  sphere.h  spray.cc  spray.h  spray_renderer.h  spray_renderer.inl  tile.cc  tile.h  trimesh_buffer.cc  (+4 more)
src/renderers/: config.cc  config.h  implicit_shape_isector.h  rays.cc  rays.h  sampler.cc  sampler.h  spray.cc  spray.h  spray_renderer.h  spray_renderer.inl  tile.cc  tile.h
src/scene/: camera.cc  camera.h  domain_intersector.h  light.h  scene.h  scene.inl  shape.h
src/tests/: CMakeLists.txt  test_obj_loader.cc
src/utils/: comm.cc  comm.h  math.h  profiler.cc  profiler.h  profiler_util.h  scan.h  timer.h  util.h
